Implement backup option

--- a/TextKeeper/appsettings.json
+++ b/TextKeeper/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "FileStoragePath": "TextFiles"
+  "FileStoragePath": "TextFiles",
+  "BackupStoregePath": "BackUpFile"
 }
